--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 ---
-site_name: The Blue Book
+site_name: My Note Book
 site_description: My personal digital garden
-site_author: Lyz
-site_url: https://lyz-code.github.io/blue-book
+site_author: Tristan
+site_url: https://TristanEDU.github.io/note-book
 #nav:
  # - Home: index.md
 
@@ -17,7 +17,7 @@ plugins:
       minify_html: true
 #  - section-index
 #  - mkdocs-newsletter
-  - gen-nav:
+  - gen_nav:
       enabled: true
 
 markdown_extensions:
@@ -83,14 +83,14 @@ theme:
         icon: material/toggle-switch
         name: Switch to light mode
 
-extra_css: [stylesheets/extra.css, stylesheets/links.css]
+#extra_css: [stylesheets/extra.css, stylesheets/links.css]
 
-extra:
-  social:
-    - icon: fontawesome/brands/github-alt
-      link: https://github.com/TristanEDU
-    - icon: fontawesome/solid/rss
-      link: https://lyz-code.github.io/blue-book/newsletter/0_newsletter_index
+#extra:
+ # social:
+  #  - icon: fontawesome/brands/github-alt
+   #   link: https://github.com/TristanEDU
+    #- icon: fontawesome/solid/rss
+     # link: https://lyz-code.github.io/blue-book/newsletter/0_newsletter_index
 
 repo_name: TristanEDU/note-book
 repo_url: https://github.com/TristanEDU/note-book
