fix: use mkdocs gh-deploy --force to trigger GitHub Pages reliably

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,31 +3,23 @@ name: Deploy MkDocs to GitHub Pages
 on:
   push:
     branches:
-      - main  # or your default branch
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: 3.9
 
-      - name: Install dependencies
-        run: |
-          pip install mkdocs mkdocs-material mkdocs-gen-nav-plugin
+      - name: Install MkDocs and Material theme
+        run: pip install mkdocs-material
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./site
-
-      - name: Install dependencies
-        run: |
-          pip install --upgrade pip
-          pip install mkdocs mkdocs-material mkdocs-gen-nav-plugin pyyaml==6.0.2 cython
+      - name: Force deploy with MkDocs
+        run: mkdocs gh-deploy --force --verbose
